# OnnxTR

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  setup.py
.conda/: meta.yaml  meta.yml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  verify_pr_labels.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: builds.yml  demo.yml  docker.yml  main.yml  pr-labels.yml  publish.yml  style.yml
demo/: README.md  app.py  requirements.txt
onnxtr/: __init__.py  file_utils.py
onnxtr/contrib/: __init__.py  artefacts.py  base.py
onnxtr/io/: elements.py  html.py  image.py  pdf.py  reader.py
onnxtr/io/image/: base.py
onnxtr/models/: __init__.py  _utils.py  builder.py  engine.py  zoo.py
onnxtr/models/classification/: zoo.py
onnxtr/models/classification/models/: __init__.py  mobilenet.py
onnxtr/models/classification/predictor/: base.py
onnxtr/models/detection/: __init__.py  core.py  zoo.py
onnxtr/models/detection/_utils/: __init__.py  base.py
onnxtr/models/detection/models/: __init__.py  differentiable_binarization.py  fast.py  linknet.py
onnxtr/models/detection/postprocessor/: base.py
onnxtr/models/detection/predictor/: base.py
onnxtr/models/factory/: hub.py
onnxtr/models/predictor/: base.py  predictor.py
onnxtr/models/preprocessor/: base.py
onnxtr/models/recognition/: core.py  utils.py  zoo.py
onnxtr/models/recognition/models/: __init__.py  crnn.py  master.py  parseq.py  sar.py  viptr.py  vitstr.py
onnxtr/models/recognition/predictor/: _utils.py  base.py
onnxtr/transforms/: base.py
onnxtr/utils/: __init__.py  common_types.py  data.py  fonts.py  geometry.py  multithreading.py  reconstitution.py  repr.py  visualization.py  vocabs.py
scripts/: convert_to_float16.py  evaluate.py  latency.py  quantize.py
tests/: conftest.py
tests/common/: test_contrib.py  test_core.py  test_engine_cfg.py  test_headers.py  test_io.py  test_io_elements.py  test_models.py  test_models_builder.py  test_models_classification.py  test_models_detection.py  test_models_detection_utils.py  test_models_factory.py  test_models_preprocessor.py  test_models_recognition.py  test_models_recognition_predictor.py  test_models_recognition_utils.py  test_models_zoo.py  test_transforms.py  test_utils_data.py  test_utils_fonts.py  test_utils_geometry.py  test_utils_multithreading.py  test_utils_reconstitution.py  test_utils_visualization.py  test_utils_vocabs.py
tests/pytorch/: test_datasets_pt.py  test_io_image_pt.py  test_models_classification_pt.py  test_models_detection_pt.py  test_models_factory.py  test_models_preprocessor_pt.py  test_models_recognition_pt.py  test_models_utils_pt.py  test_models_zoo_pt.py  test_transforms_pt.py
tests/tensorflow/: test_datasets_loader_tf.py  test_datasets_tf.py  test_io_image_tf.py  test_models_classification_tf.py  test_models_detection_tf.py  test_models_factory.py  test_models_preprocessor_tf.py  test_models_recognition_tf.py  test_models_utils_tf.py  test_models_zoo_tf.py  test_transforms_tf.py
