[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onnxtr"
description = "Onnx Text Recognition (OnnxTR): docTR Onnx-Wrapper for high-performance OCR on documents."
authors = [{name = "Felix Dittrich", email = "felixdittrich92@gmail.com"}]
maintainers = [
    {name = "Felix Dittrich"},
]
readme = "README.md"
requires-python = ">=3.10.0,<4"
license = {file = "LICENSE"}
keywords=["OCR", "deep learning", "computer vision", "onnx", "text detection", "text recognition", "docTR", "document analysis", "document processing", "document AI"]
classifiers=[
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Intended Audience :: Education",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: Apache Software License",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = [
    # For proper typing, mypy needs numpy>=1.20.0 (cf. https://github.com/numpy/numpy/pull/16515)
    # Additional typing support is brought by numpy>=1.22.4, but core build sticks to >=1.16.0
    "numpy>=1.16.0,<3.0.0",
    "scipy>=1.4.0,<2.0.0",
    "pypdfium2>=4.11.0,<5.0.0",
    "pyclipper>=1.2.0,<2.0.0",
    "rapidfuzz>=3.0.0,<4.0.0",
    "langdetect>=1.0.9,<2.0.0",
    "huggingface-hub>=0.23.0,<1.0.0",
    "Pillow>=9.2.0",
    "defusedxml>=0.7.0",
    "anyascii>=0.3.2",
    "tqdm>=4.30.0",
]

[project.optional-dependencies]
cpu = [
    "onnxruntime>=1.18.0",
    "opencv-python>=4.5.0,<5.0.0",
]
gpu = [
    "onnxruntime-gpu>=1.18.0",
    "opencv-python>=4.5.0,<5.0.0",
]
openvino = [
    "onnxruntime-openvino>=1.18.0",
    "opencv-python>=4.5.0,<5.0.0",
]
cpu-headless = [
    "onnxruntime>=1.18.0",
    "opencv-python-headless>=4.5.0,<5.0.0",
]
gpu-headless = [
    "onnxruntime-gpu>=1.18.0",
    "opencv-python-headless>=4.5.0,<5.0.0",
]
openvino-headless = [
    "onnxruntime-openvino>=1.18.0",
    "opencv-python-headless>=4.5.0,<5.0.0",
]
html = [
    "weasyprint>=55.0",
]
viz = [
    "matplotlib>=3.1.0",
    "mplcursors>=0.3",
]
testing = [
    "pytest>=5.3.2",
    "coverage[toml]>=4.5.4",
    "requests>=2.20.0",
    "pytest-memray>=1.7.0",
    "psutil>=7.0.0",
]
quality = [
    "ruff>=0.1.5",
    "mypy>=0.812",
    "pre-commit>=2.17.0",
]
dev = [
    # Runtime
    "onnxruntime>=1.18.0",
    "opencv-python>=4.5.0,<5.0.0",
    # HTML
    "weasyprint>=55.0",
    # Visualization
    "matplotlib>=3.1.0",
    "mplcursors>=0.3",
    # Testing
    "pytest>=5.3.2",
    "coverage[toml]>=4.5.4",
    "requests>=2.20.0",
    "pytest-memray>=1.7.0",
    "psutil>=7.0.0",
    # Quality
    "ruff>=0.1.5",
    "mypy>=0.812",
    "pre-commit>=2.17.0",
]

[project.urls]
repository = "https://github.com/felixdittrich92/OnnxTR"
tracker = "https://github.com/felixdittrich92/OnnxTR/issues"
changelog = "https://github.com/felixdittrich92/OnnxTR/releases"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*", "scripts*", "demo*"]

[tool.setuptools.package-data]
onnxtr = ["py.typed"]

[tool.mypy]
files = "onnxtr/"
show_error_codes = true
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
implicit_reexport = false

[[tool.mypy.overrides]]
module = [
    "onnxruntime.*",
	"PIL.*",
	"scipy.*",
	"cv2.*",
	"matplotlib.*",
    "numpy.*",
	"pyclipper.*",
	"mplcursors.*",
	"defusedxml.*",
	"weasyprint.*",
	"pypdfium2.*",
	"langdetect.*",
    "huggingface_hub.*",
    "rapidfuzz.*",
    "anyascii.*",
    "tqdm.*",
]
ignore_missing_imports = true

[tool.ruff]
exclude = [".git", "venv*", "build", "**/__init__.py"]
line-length = 120
target-version = "py310"
preview=true

[tool.ruff.lint]
select = [
    # https://docs.astral.sh/ruff/rules/
    "E", "W", "F", "I", "N", "Q", "C4", "T10", "LOG",
    "D101", "D103", "D201","D202","D207","D208","D214","D215","D300","D301","D417", "D419", "D207"  # pydocstyle
]
ignore = ["E402", "E203", "F403", "E731", "N812", "N817", "C408", "LOG015"]

[tool.ruff.lint.isort]
known-first-party = ["onnxtr", "utils"]
known-third-party = ["onnxruntime", "cv2"]

[tool.ruff.lint.per-file-ignores]
"onnxtr/models/**.py" = ["N806", "F841"]
"tests/**.py" = ["D"]
"scripts/**.py" = ["D"]
"demo/**.py" = ["D"]
".github/**.py" = ["D"]


[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.coverage.run]
source = ["onnxtr"]
